--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,21 @@ six==1.11.0
 visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.2.1
+Click==7.0
+dominate==2.3.4
+Flask==1.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+flask-mongoengine==0.9.5
+Flask-Script==2.0.5
+Flask-WTF==0.14.2
+itsdangerous==0.24
+jieba==0.39
+Jinja2==2.10
+MarkupSafe==1.0
+mongoengine==0.15.3
+pymongo==3.7.1
+six==1.11.0
+visitor==0.1.3
+Werkzeug==0.14.1
+WTForms==2.2.1
