--- a/django_blog/frontend/package.json
+++ b/django_blog/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "maocat <zk246422@163.com>",
+  "author": "MAODOU <zk246422@163.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
