--- a/django_blog/utils/supervisord.conf
+++ b/django_blog/utils/supervisord.conf
@@ -1,47 +1,31 @@
-; supervisor config file
-
 [unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
-chmod=0700                       ; sockef file mode (default 0700)
+file=/tmp/supervisor.sock   ; the path to the socket file
 
 [supervisord]
-logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
-pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
-logfile_maxbytes=50MB
-logfile_backups=10
-loglevel=info
-pidfile=/tmp/supervisord.pid
-nodaemon=true
-minfds=1024
-minprocs=200
-; the below section must remain in the config file for RPC
-; (supervisorctl/web interface) to work, additional interfaces may be
-; added by defining them in separate rpcinterface: sections
+logfile=/opt/webapps/logs/supervisord.log ; main log file; default $CWD/supervisord.log
+logfile_maxbytes=50MB        ; max main logfile bytes b4 rotation; default 50MB
+logfile_backups=10           ; # of main logfile backups; 0 means none, default 10
+loglevel=info                ; log level; default info; others: debug,warn,trace
+pidfile=/tmp/supervisord.pid ; supervisord pidfile; default supervisord.pid
+nodaemon=false               ; start in foreground if true; default false
+minfds=1024                  ; min. avail startup file descriptors; default 1024
+minprocs=200                 ; min. avail process descriptors;default 200
+
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
-; The [include] section can just contain the "files" setting.  This
-; setting can list multiple files (separated by whitespace or
-; newlines).  It can also contain wildcards.  The filenames are
-; interpreted as relative to this file.  Included files *cannot*
-; include files themselves.
-
-[include]
-files = /etc/supervisor/conf.d/*.conf
-
-
-[program:django_blog]
-directory = /opt/webapps
-command=uwsgi --ini /opt/webapps/django_blog/uwsgi.ini
+[program:blog]
+directory = /opt/webapps/django_blog
+command=uwsgi --ini /opt/webapps/blog_maocat/django_blog/uwsgi_1.ini
+;command=uwsgi --ini /opt/webapps/django_blog/uwsgi.ini
 autostart=true
 autorestart=true
 redirect_stderr=false
-stdout_logfile=/opt/logs/backend-stdout.log
-stderr_logfile=/opt/logs/backend-stderr.log
+stdout_logfile=/opt/webapps/logs/blog-stdout.log
+stderr_logfile=/opt/webapps/logs/blog-stderr.log
 stdout_logfile_maxbytes=50MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
